--- a/homework6/src/main/resources/static/index.html
+++ b/homework6/src/main/resources/static/index.html
@@ -9,8 +9,9 @@
 <header>
     <a href="/" class="button">Home</a>
     <a href="/tasks" class="button">Task list</a>
-    <a href="/swagger-ui/index.html" class="button">Swagger(default)</a>
-    <a href="/idev-documentation" class="button">Swagger(custom)</a>
+    <a href="/employers" class="button">Employers list</a>
+<!--    <a href="/swagger-ui/index.html" class="button">Swagger(default)</a>-->
+    <a href="/idev-documentation" class="button">Swagger</a>
     <a href="/idev-api-docs" class="button">Swagger Docs</a>
 </header>
 <h3>Task Service</h3>
